# Bank-Account-System

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  USAGE.md
.github/workflows/: build-windows.yml
.scripts/: build.ps1  initialize-project.ps1  setup-environment.ps1
assets/css/: styles.css
assets/html/: index.html
assets/js/: modal.js  script.js
assets/web/: home.html  login.html  register.html
include/: Account.h  Bank.h  BankAccount.h  BankApp.h  BankUI.h  FileLoader.h  ServerRoutes.h  serverroutes.h
include/filemanager/: filemanager.h
lib/httplib/: CMakeLists.txt
lib/httplib/src/: httplib.cpp
lib/webview2/: Microsoft.Web.WebView2.nuspec
lib/webview2/_rels/: .rels
src/: Account.cpp  Bank.cpp  BankAccount.cpp  BankApp.cpp  BankUI.cpp  FileLoader.cpp  FileManager.cpp  ServerRoutes.cpp  main.cpp  serverroutes.cpp
src/filemanager/: fileloader.cpp  filemanager.cpp
